--- a/private/templates/sbnext-common/login.twig
+++ b/private/templates/sbnext-common/login.twig
@@ -23,14 +23,17 @@
         <div class="panel panel-default">
             <div class="panel-body">
                 <form method="post" name="loginForm" id="loginForm" action="login.php" class="form-signin">
-                    <h2 class="form-signin-heading">{{ __("Login") }}</h2>
-                    <input type="text" name="username" class="form-control" placeholder="{{ __("Username") }}">
-                    <input type="password" name="password" class="form-control" placeholder="{{ __("Password") }}">
-                    <br>
+                    <div class="form-group">
+                        <label for="email">{{ __("Username") }}</label>
+                        <input type="text" name="username" class="form-control" placeholder="{{ __("Username") }}">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">{{ __("Password") }}</label>
+                        <input type="password" name="password" class="form-control" placeholder="{{ __("Password") }}">
+                    </div>
                     <input class="btn btn-lg btn-primary" type="submit" value="{{ __("Login") }}"
                            name="loginsubmit">
-                    <br>
-                    <p>{{ __("Don't have an account?") }} <a href="./register.php">{{ __("Register") }}</a>
                 </form>
             </div>
         </div>
