--- a/finalium/assets/stylesheets/bootstrap/_variables.scss
+++ b/finalium/assets/stylesheets/bootstrap/_variables.scss
@@ -629,7 +629,7 @@ $modal-sm:                    300px !default;
 //
 //## Define alert colors, border radius, and padding.
 
-$alert-padding:               15px !default;
+$alert-padding:               10px 15px !default;
 $alert-border-radius:         $border-radius-base !default;
 $alert-link-font-weight:      bold !default;
 
