improve betty finalium watch page

--- a/betty/skins/common/image.twig
+++ b/betty/skins/common/image.twig
@@ -1,1 +1,1 @@
-<img class="img-fluid" src="{{ submission.file }}" alt="{{ submission.title }}"> 
+<img class="img-responsive center-block" src="{{ submission.file }}" alt="{{ submission.title }}">
