--- a/betty/skins/finalium/templates/watch.twig
+++ b/betty/skins/finalium/templates/watch.twig
@@ -16,9 +16,9 @@
                     <div class="row">
                         <div class="col-md-8 col-xs-8">
                             By {{ submission.author.info.username }}
-                            <button class="btn btn-default">
+                            <button class="btn btn-default" id="submission-follow">
                                 Follow
-                                <span class="label label-default">0</span>
+                                <span class="label label-default" id="submission-followers">0</span>
                             </button>
                         </div>
                         <div class="col-md-8 col-xs-8 text-right">
