--- a/betty/skins/finalium/templates/index.twig
+++ b/betty/skins/finalium/templates/index.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div>
         {% if updated %}
-            <div class="header_message header-primary">Options changed!</div>
+            <div class="alert alert-success">Options changed!</div>
         {% endif %}
         {% for submission in submissions %}
             <div>
