package.json for finalium

--- a/finalium/assets/stylesheets/finalium.scss
+++ b/finalium/assets/stylesheets/finalium.scss
@@ -2,7 +2,7 @@
  * Finalium v2.0.0-alpha1
  * A fork of Bootstrap v3.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
- * Copyright 2023 The openSB Contributors
+ * Copyright 2023 The BettySB Contributors
  * Licensed under MIT (https://gitlab.com/qobo/opensb/-/blob/main/finalium/LICENSE)
  */
 
