proper-ish index page, qobo-mode video watching on betty

--- a/betty/skins/common/player.twig
+++ b/betty/skins/common/player.twig
@@ -27,7 +27,7 @@
         preload: "auto"
     });
 
-    {% if bunnyEnabled %}
+    {% if is_qobo %}
     player.src([{
         src: '{{ submission.file }}',
         type: 'application/x-mpegURL'
