--- a/finalium/assets/stylesheets/finalium.scss
+++ b/finalium/assets/stylesheets/finalium.scss
@@ -47,6 +47,7 @@
 @import "bootstrap/wells";
 @import "bootstrap/close";
 @import "bootstrap/footer";
+@import "bootstrap/dialogs";
 
 // Components w/ JavaScript
 @import "bootstrap/modals";
