--- a/finalium/assets/stylesheets/bootstrap/_component-animations.scss
+++ b/finalium/assets/stylesheets/bootstrap/_component-animations.scss
@@ -8,10 +8,15 @@
 // fields in IE7-8. Source: https://github.com/twbs/bootstrap/pull/3552.
 
 .fade {
-  opacity: 0;
-  @include transition(opacity .15s linear);
+  opacity: 1;
+}
 
-  &.in {
+@keyframes fade-animation {
+  from {
+    opacity: 0;
+  }
+
+  to {
     opacity: 1;
   }
 }
