--- a/private/templates/sbnext-common/login.twig
+++ b/private/templates/sbnext-common/login.twig
@@ -24,12 +24,12 @@
             <div class="panel-body">
                 <form method="post" name="loginForm" id="loginForm" action="login.php" class="form-signin">
                     <div class="form-group">
-                        <label for="email">{{ __("Username") }}</label>
+                        <label for="username">{{ __("Username") }}</label>
                         <input type="text" name="username" class="form-control" placeholder="{{ __("Username") }}">
                     </div>
 
                     <div class="form-group">
-                        <label for="email">{{ __("Password") }}</label>
+                        <label for="password">{{ __("Password") }}</label>
                         <input type="password" name="password" class="form-control" placeholder="{{ __("Password") }}">
                     </div>
                     <input class="btn btn-lg btn-primary" type="submit" value="{{ __("Login") }}"
