--- a/finalium/assets/stylesheets/bootstrap/_labels.scss
+++ b/finalium/assets/stylesheets/bootstrap/_labels.scss
@@ -13,6 +13,7 @@
   white-space: nowrap;
   vertical-align: baseline;
   border-radius: .25em;
+  text-shadow: none;
 
   // [converter] extracted a& to a.label
 
