--- a/betty/skins/finalium/templates/footer_options.twig
+++ b/betty/skins/finalium/templates/footer_options.twig
@@ -1,19 +1,8 @@
-<form action="customizer.php" method="post">
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <h1>Options</h1>
-            <div class="alert alert-info">
-                Localization functionality has been removed.
-            </div>
-            <label for="skin">Skin</label>
-            <select class="form-select" name="skin">
-                {% for skin in skins %}
-                    <option value="{{ skin.metadata.id }}">{{ skin.metadata.name }}</option>
-                {% endfor %}
-            </select>
-            <div class="text-right">
-                <input class="btn btn-primary" type="submit" name="action" value="Save">
-            </div>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <h1>Options</h1>
+        <div class="alert alert-danger">
+             Changing options within an OpenSB-based page is no longer supported.
         </div>
     </div>
-</form>
+</div>
