--- a/finalium/assets/stylesheets/bootstrap/_dialogs.scss
+++ b/finalium/assets/stylesheets/bootstrap/_dialogs.scss
@@ -8,7 +8,7 @@
   border: 1px solid $modal-content-border-color;
   border-radius: $border-radius-large;
   padding: 0;
-  width: $modal-md;
+  max-width: $modal-xl;
   transform: translateY(0);
   @include box-shadow(0 3px 9px rgba(0, 0, 0, .5));
 
