--- a/finalium/assets/stylesheets/bootstrap/_variables.scss
+++ b/finalium/assets/stylesheets/bootstrap/_variables.scss
@@ -620,6 +620,7 @@ $modal-header-border-color:   #e5e5e5 !default;
 //** Modal footer border color
 $modal-footer-border-color:   $modal-header-border-color !default;
 
+$modal-xl:                    1200px !default;
 $modal-lg:                    900px !default;
 $modal-md:                    600px !default;
 $modal-sm:                    300px !default;
