--- a/betty/skins/finalium/templates/watch.twig
+++ b/betty/skins/finalium/templates/watch.twig
@@ -15,7 +15,7 @@
                     <h3 style="margin-top: 0;word-break: break-all;">{{ submission.title }}</h3>
                     <div class="row">
                         <div class="col-md-8 col-xs-8">
-                            <img class="img-rounded" style="width: 32px;" src="{{ profile_picture(comment.author.info.username) }}">
+                            <img class="img-rounded" style="width: 32px;" src="{{ profile_picture(submission.author.info.username) }}">
                             {{ user_link(submission.author) }}
                             <button class="btn btn-default" id="submission-follow">
                                 Follow
