rewrite common_new.js with vanilla js

--- a/betty/skins/finalium/templates/_layout.twig
+++ b/betty/skins/finalium/templates/_layout.twig
@@ -7,8 +7,6 @@
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="/finalium/css/finalium.css" type="text/css">
-    <script src="/finalium/js/finalium.js"></script>
-    <!--<script src="/assets/common_new.js"></script>-->
     {% if google_tag %}
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id={{ google_tag }}"></script>
@@ -50,5 +48,7 @@
         {% include "components/dialog_options.twig" %}
     </div>
 </footer>
+<script src="/finalium/js/finalium.js"></script>
+<script src="/assets/common_new.js"></script>
 </body>
 </html>
