--- a/betty/skins/finalium/templates/components/header.twig
+++ b/betty/skins/finalium/templates/components/header.twig
@@ -16,6 +16,12 @@
             <ul class="nav navbar-nav">
                 <li><a href="/browse.php">Browse</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/userlist.php">Users</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/community.php">Community</a></li>
+            </ul>
             <form class="navbar-form navbar-left">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
