port user list page to bettysb

--- a/betty/skins/finalium/templates/components/header.twig
+++ b/betty/skins/finalium/templates/components/header.twig
@@ -17,7 +17,7 @@
                 <li><a href="/browse.php">Browse</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li><a href="/userlist.php">Users</a></li>
+                <li><a href="/users.php">Users</a></li>
             </ul>
             <ul class="nav navbar-nav">
                 <li><a href="/community.php">Community</a></li>
