incomplete ratings thing

--- a/betty/skins/finalium/templates/_layout.twig
+++ b/betty/skins/finalium/templates/_layout.twig
@@ -56,5 +56,6 @@
 </footer>
 <script src="/finalium/js/finalium.js"></script>
 <script src="/assets/common_new.js"></script>
+{% block scripts %}{% endblock %}
 </body>
 </html>
